controlar errores consola

--- a/ProyectoCodigoLimpio/ProyectoCodigoLimpioClient.csproj
+++ b/ProyectoCodigoLimpio/ProyectoCodigoLimpioClient.csproj
@@ -14,9 +14,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Update="UI\Chat.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="UI\Chat.cs" />
   </ItemGroup>
 
   <ItemGroup>
