Clase conexion con la base de datos

--- a/ProyectoCodigoLimpio/ProyectoCodigoLimpioClient.csproj
+++ b/ProyectoCodigoLimpio/ProyectoCodigoLimpioClient.csproj
@@ -18,11 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Interfaces\" />
     <Folder Include="Resources\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Catel.MVVM" Version="5.12.22" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
